[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/past/Gold.gd" type="Script" id=1]
[ext_resource path="res://assets/environment/gold.png" type="Texture" id=2]
[ext_resource path="res://utils/MultiAudioPlayer.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="AudioStreamRandomPitch" id=2]
resource_local_to_scene = true

[node name="Gold" type="Area2D" groups=["past"]]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollectSFX" parent="." instance=ExtResource( 3 )]
stream = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Gold_body_entered"]
[connection signal="finished" from="CollectSFX" to="." method="_on_CollectSFX_finished"]
